@@ -1,3 +1,8 @@
+2010-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* log.py:
+	  Handle the case where there is no useful stack to deal with.
+
 2009-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* log.py:
